--- a/package.json
+++ b/package.json
@@ -19,5 +19,5 @@
     "type" : "git",
     "url" : "https://github.com/anonyco/FastestSmallestTextEncoderDecoder.git"
   },
-  "files": ["NodeJS/EncoderAndDecoderNodeJS.src.js", "EncoderDecoderTogether.min.js"]
+  "files": ["NodeJS/EncoderAndDecoderNodeJS.src.js", "EncoderDecoderTogether.min.js", "NodeJS/EncoderAndDecoderNodeJS.min.js.map"]
 }
