--- a/package.json
+++ b/package.json
@@ -1,8 +1,29 @@
 {
 	"name": "fastestsmallesttextencoderdecoder",
-	"version": "1.0.7",
+	"version": "1.0.13",
 	"description": "The fastest smallest Javascript polyfill for the encode of TextEncoder and decode of TextDecoder for UTF-8 only. Made by AnonyCo with ❤️ from 🐕s.",
-	"keywords": ["utf-8","encoding","decoding","encoder","decoder","javascript","polyfill","js","utf8","compact","cross-browser","utf8-string","pure-javascript","nodejs","node-js","node-module","nodejs-modules","performance","tiny","small"],
+	"keywords": [
+		"utf-8",
+		"encoding",
+		"decoding",
+		"encoder",
+		"decoder",
+		"javascript",
+		"polyfill",
+		"js",
+		"utf8",
+		"compact",
+		"cross-browser",
+		"utf8-string",
+		"pure-javascript",
+		"nodejs",
+		"node-js",
+		"node-module",
+		"nodejs-modules",
+		"performance",
+		"tiny",
+		"small"
+	],
 	"homepage": "https://github.com/anonyco/FastestSmallestTextEncoderDecoder#quick-start",
 	"bugs": {
 		"url": "https://github.com/anonyco/FastestSmallestTextEncoderDecoder/issues",
@@ -10,10 +31,11 @@
 	},
 	"scripts": {
 		"install-dev": "npm install; mkdir compiler-latest 2> /dev/null; wget -P ./compiler-latest/ 'https://dl.google.com/closure-compiler/compiler-latest.tar.gz'; unlink ./closure-compiler.jar 2> /dev/null; cd compiler-latest; tar xvzf compiler-latest.tar.gz; bash -c 'for j in closure-compiler-*; do mv -- \"$j\" \"../closure-compiler.jar\" 1> /dev/null; done' 1> /dev/null 2> /dev/null; cd ..; rm -rf compiler-latest 2> /dev/null",
-		"build": "npm run build-require; npm run build-module",
-		"build-require": "java -Xms32M -Xmx1024M -jar ./closure-compiler.jar --source_map_format V3 --js './NodeJS/EncoderAndDecoderNodeJS.src.js' --js_output_file ./NodeJS/EncoderAndDecoderNodeJS.min.js  --create_source_map ./NodeJS/EncoderAndDecoderNodeJS.min.js.map --compilation_level ADVANCED_OPTIMIZATIONS --output_wrapper '%output%//AnonyCo\n//# sourceMappingURL=EncoderAndDecoderNodeJS.min.js.map' --language_out ECMASCRIPT_2017",
-		"build-module": "java -Xms32M -Xmx1024M -jar ./closure-compiler.jar --source_map_format V3 --js './NodeJS/EncoderAndDecoderNodeJS.src.module.js' --js_output_file ./NodeJS/EncoderAndDecoderNodeJS.min.module.js  --create_source_map ./NodeJS/EncoderAndDecoderNodeJS.min.module.js.map --compilation_level ADVANCED_OPTIMIZATIONS --output_wrapper '%output%//AnonyCo\n//# sourceMappingURL=EncoderAndDecoderNodeJS.min.module.js.map' --language_out ECMASCRIPT_2017; sed -i -e 's/window\\.export_/export var /g' './NodeJS/EncoderAndDecoderNodeJS.min.module.js'",
-		"build-es6": "java -Xms32M -Xmx1024M -jar ./closure_compiler.jar --source_map_format V3 --js './NodeJS/EncoderAndDecoderNodeJS.src.module.js' --js_output_file ./NodeJS/EncoderAndDecoderNodeJS.min.module.js  --create_source_map ./NodeJS/EncoderAndDecoderNodeJS.min.module.js.map --compilation_level ADVANCED_OPTIMIZATIONS --output_wrapper '%output%//AnonyCo\n//# sourceMappingURL=EncoderAndDecoderNodeJS.min.module.js.map'  --language_out ECMASCRIPT_2017; sed -i -e 's/window\\.export_/export var /g' './NodeJS/EncoderAndDecoderNodeJS.min.module.js'"
+		"build": "npm run build-browser; npm run build-require; npm run build-module",
+		"build-browser": "java -Xms32M -Xmx1024M -jar ./closure-compiler.jar --source_map_format V3 --js './EncoderDecoderTogether.src.js' --js_output_file './EncoderDecoderTogether.min.js' --create_source_map './EncoderDecoderTogether.min.js.map' --compilation_level ADVANCED_OPTIMIZATIONS --output_wrapper '%output%//AnonyCo\n//# sourceMappingURL=EncoderDecoderTogether.min.js.map'; java -Xms32M -Xmx1024M -jar ./closure-compiler.jar --source_map_format V3 --js './individual/FastestTextDecoderPolyfill.src.js' --js_output_file './individual/FastestTextDecoderPolyfill.min.js' --create_source_map './individual/FastestTextDecoderPolyfill.min.js.map' --compilation_level ADVANCED_OPTIMIZATIONS --output_wrapper '%output%//AnonyCo\n//# sourceMappingURL=FastestTextDecoderPolyfill.min.js.map'; java -Xms32M -Xmx1024M -jar ./closure-compiler.jar --source_map_format V3 --js './individual/FastestTextEncoderPolyfill.src.js' --js_output_file './individual/FastestTextEncoderPolyfill.min.js' --create_source_map './individual/FastestTextEncoderPolyfill.min.js.map' --compilation_level ADVANCED_OPTIMIZATIONS --output_wrapper '%output%//AnonyCo\n//# sourceMappingURL=FastestTextEncoderPolyfill.min.js.map'",
+		"build-require": "java -Xms32M -Xmx1024M -jar ./closure-compiler.jar --source_map_format V3 --js './NodeJS/EncoderAndDecoderNodeJS.src.js' --js_output_file ./NodeJS/EncoderAndDecoderNodeJS.min.js --create_source_map ./NodeJS/EncoderAndDecoderNodeJS.min.js.map --compilation_level ADVANCED_OPTIMIZATIONS --output_wrapper '%output%//AnonyCo\n//# sourceMappingURL=EncoderAndDecoderNodeJS.min.js.map' --language_out ECMASCRIPT_2017",
+		"build-module": "java -Xms32M -Xmx1024M -jar ./closure-compiler.jar --source_map_format V3 --js './NodeJS/EncoderAndDecoderNodeJS.src.module.js' --js_output_file ./NodeJS/EncoderAndDecoderNodeJS.min.module.js --create_source_map ./NodeJS/EncoderAndDecoderNodeJS.min.module.js.map --compilation_level ADVANCED_OPTIMIZATIONS --output_wrapper '%output%//AnonyCo\n//# sourceMappingURL=EncoderAndDecoderNodeJS.min.module.js.map' --language_out ECMASCRIPT_2017; sed -i -e 's/window\\.export_/export var /g' './NodeJS/EncoderAndDecoderNodeJS.min.module.js'",
+		"build-es6": "java -Xms32M -Xmx1024M -jar ./closure_compiler.jar --source_map_format V3 --js './NodeJS/EncoderAndDecoderNodeJS.src.module.js' --js_output_file ./NodeJS/EncoderAndDecoderNodeJS.min.module.js --create_source_map ./NodeJS/EncoderAndDecoderNodeJS.min.module.js.map --compilation_level ADVANCED_OPTIMIZATIONS --output_wrapper '%output%//AnonyCo\n//# sourceMappingURL=EncoderAndDecoderNodeJS.min.module.js.map' --language_out ECMASCRIPT_2017; sed -i -e 's/window\\.export_/export var /g' './NodeJS/EncoderAndDecoderNodeJS.min.module.js'"
 	},
 	"license": "Unlicense",
 	"author": {
@@ -31,7 +53,7 @@
 	},
 	"files": [
 		"EncoderDecoderTogether.min.js",
-		"EncoderDecoderTogether.src.js",
+		"EncoderDecoderTogether.min.js.map",
 		"NodeJS/EncoderAndDecoderNodeJS.min.js",
 		"NodeJS/EncoderAndDecoderNodeJS.min.js.map",
 		"NodeJS/EncoderAndDecoderNodeJS.min.module.js",
