--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # in case if you have installed node modules
 /node_modules
+/package-lock.json
 
 # skip the utilities used to build this library
 /compiler-latest
 /closure-compiler.jar
+/zopfli
 
 # just in case
 /.git
