--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"NodeJS/EncoderAndDecoderNodeJS.min.js",
 		"NodeJS/EncoderAndDecoderNodeJS.min.mjs"
 	],
-	"publishConfig": { "registry": "https://registry.npmjs.org/" }
-
+	"publishConfig": {
+		"registry": "https://registry.npmjs.org/"
+	}
 }
